another attempt at fixing search layout on mobile issue #234

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -261,7 +261,9 @@ div.unseen, .unseen .subject { font-weight: 700; }
     .search_update { clear: both; }
     .search_content .refresh_list { display: none; }
     .search_content .content_title { max-height: 500px; }
-    .search_content { padding-top: 60px; }
+    .search_form select { width: 30px; }
+    .search_terms { width: 100px; }
+    .search_content { padding-top: 30px; }
     .unsaved_reminder { display: none; }
     .checkbox_cell { width: 35px; }
     .checkbox_cell label { width: 30px; height: 30px; }
